# openktg

./: .gitignore  CMakeLists.txt  demo.cpp  main.cpp
benchmarks/: CMakeLists.txt  demo_benchmark.cpp
include/openktg/: gentexture.h  helpers.h  macro.h  matrix.h  noise.h  pixel.h  procedural.h  random.h  types.h  utility.h
include/openktg/core/: color.h  matrix.h  pixel.h  texture.h
include/openktg/legacy/: gentexture.h
include/openktg/noise/: perlin.h
include/openktg/tex/: composite.h  filters.h  generators.h  procedural.h  sampling.h
include/openktg/texture/: texture.h
include/openktg/util/: concepts.h  helpers.h  random.h  utility.h
src/: gentexture.cpp  pixel.cpp
src/core/: matrix.cpp  pixel.cpp  texture.cpp
src/legacy/: gentexture.cpp
src/tex/: composite.cpp  filters.cpp  generators.cpp  sampling.cpp
tests/: CMakeLists.txt  test_end_to_end.cpp  test_pixel.cpp  test_utils.cpp
tests/data/: end_to_end.tga
